removing x-scrollbar created padding - fixed

--- a/styles/main.css
+++ b/styles/main.css
@@ -21,6 +21,8 @@
             height: 100vh;
             min-height: 100vh;
             overflow-x: hidden;
+            margin: 0px;
+            padding: 0px;
         }
 
         body {
